<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#CC000000"
    android:padding="12dp">


    <TextView
        android:id="@+id/txtInventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventory"
        android:textColor="#E7522E"
        android:layout_below="@id/logo"/>

    <TextView
        android:id="@+id/txtQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity_inventory"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/txtBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidden_balance"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_below="@id/txtQuestion"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/txtManage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_inventory"
        android:textColor="@android:color/white"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/txtBalance"
        android:layout_marginTop="8dp"/>


    <!-- Logo arriba izquierda -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@android:drawable/ic_menu_view"
        android:layout_alignParentStart="true"/>

    <!-- Ojo toggle (arriba derecha) -->
    <ImageView
        android:id="@+id/btnToggle"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-4dp"
        android:src="@android:drawable/ic_menu_view"
        app:tint="@android:color/white"/> <!-- Cambiado a app:tint -->


    <ImageView
        android:id="@+id/btnManage"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_toLeftOf="@id/txtManage"
        android:layout_below="@id/txtBalance"
        android:layout_marginRight="8dp"
        android:src="@android:drawable/ic_menu_manage"
        app:tint="#FA8523"/> <!-- Cambiado a app:tint -->
</RelativeLayout>
